--- a/src/Components/Layouts/Footer/Footer.css
+++ b/src/Components/Layouts/Footer/Footer.css
@@ -1,6 +1,7 @@
 .cont-footer{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     width: 100%;
     background-color: #282b5c;
     padding: 1rem 0rem;
